--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,19 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "yiisoft/yii2-jui": "*",        
+        "kartik-v/yii2-date-range": "*", 
+        "kartik-v/yii2-widgets": "*",
+        "kartik-v/yii2-mpdf": "*",
+        "kartik-v/yii2-export": "*",
+        "kartik-v/yii2-detail-view": "*",
+        "kartik-v/yii2-date-range": "*",       
+        "kartik-v/yii2-grid": "@dev",
+        "kartik-v/yii2-editable": "*",
+        "kartik-v/yii2-checkbox-x": "*",  
+        "kartik-v/yii2-widget-depdrop": "@dev",
+        "kartik-v/yii2-krajee-base": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
