--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "kartik-v/yii2-editable": "*",
         "kartik-v/yii2-checkbox-x": "*",  
         "kartik-v/yii2-widget-depdrop": "@dev",
-        "kartik-v/yii2-krajee-base": "dev-master"
+        "kartik-v/yii2-krajee-base": "dev-master",
+        "miloschuman/yii2-highcharts-widget": "dev-master",
+        "dektrium/yii2-user": "^0.9.12"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
