--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "kartik-v/yii2-widget-depdrop": "@dev",
         "kartik-v/yii2-krajee-base": "dev-master",
         "miloschuman/yii2-highcharts-widget": "dev-master",
-        "dektrium/yii2-user": "^0.9.12"
+        "dektrium/yii2-user": "^0.9.12",
+        "dmstr/yii2-adminlte-asset": "2.*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
