--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,9 @@
         "kartik-v/yii2-krajee-base": "dev-master",
         "miloschuman/yii2-highcharts-widget": "dev-master",
         "dektrium/yii2-user": "^0.9.12",
-        "dmstr/yii2-adminlte-asset": "2.*"
+        "dmstr/yii2-adminlte-asset": "2.*",
+        "dektrium/yii2-rbac": "1.0.0-alpha@dev",
+        "mdmsoft/yii2-admin": "~2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
